<?xml version="1.0"?>
<package>
  <name>vrviz</name>
  <version>1.0.0</version>
  <description>
    The vrviz package for ROS display on a vive
  </description>
  <maintainer email="john.oneill.86@gmail.com">John O'Neill</maintainer>
  <license>GPL V3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>openvr_library</build_depend>
  <build_depend>sdl2_library</build_depend>
  <build_depend>vulkan_library</build_depend>
  <build_depend>common_rosdeps</build_depend>
  <build_depend>assimp</build_depend>
  <build_depend>libglew-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>openvr_library</run_depend>
  <run_depend>sdl2_library</run_depend>
  <run_depend>vulkan_library</run_depend>
  <run_depend>common_rosdeps</run_depend>
  <run_depend>assimp</run_depend>
  <run_depend>libglew-dev</run_depend>

</package>
